Added CSS in the same file as there would be many other views and it would be difficult to create just 1 CSS file.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -76,5 +76,100 @@
         </li>
       </ul>
     </div>
-  </body>
+  </body>  
 </html>
+
+<style>
+	body,
+	html {
+	  height: 100%;
+	  margin: 0;
+	  font: 400 15px/1.8 "Lato", sans-serif;
+	  color: #777;
+	  background-image: url("home page.jpg");
+	  background-position: center;
+	  background-repeat: no-repeat;
+	  background-size: cover;
+	  background-attachment: fixed;
+	}
+  
+	.header {
+	  letter-spacing: 8px;
+	  text-transform: uppercase;
+	  background-color: black;
+	  padding: 1px;
+	  text-align: center;
+	  font: 20px "Lato", sans-serif;
+	  color: white;
+	}
+  
+	.topnav {
+	  width: 100%;
+	  overflow: hidden;
+	  background-color: black;
+	  float: left;
+	  display: block;
+	  color: white;
+	  text-align: center;
+	  font: 15px "Lato", sans-serif;
+	  font-style: bold;
+	  text-transform: uppercase;
+	  padding: 25px;
+	  letter-spacing: 7px;
+	}
+  
+	.topnav a:hover,
+	a:visited {
+	  background-color: #ffd100;
+	  color: white;
+	}
+  
+	.caption {
+	  position: absolute;
+	  left: 0;
+	  top: 24%;
+	  width: 100%;
+	  text-align: center;
+	  color: black;
+	}
+  
+	.caption span.border {
+	  background-color: #ffd100;
+	  color: black;
+	  text-transform: uppercase;
+	  padding: 18px;
+	  font-size: 30px;
+	  letter-spacing: 10px;
+	}
+  
+	.caption h3 {
+	  letter-spacing: 1px;
+	  opacity: 0.8;
+	  position: absolute;
+	  left: 25%;
+	  right: 25%;
+	  top: 100%;
+	  width: 50%;
+	  text-align: center;
+	  font-style: italic;
+	  background-color: black;
+	  font: 16px times new roman;
+	  color: white;
+	}
+  
+	.latest p {
+	  letter-spacing: 1px;
+	  opacity: 0.7;
+	  position: absolute;
+	  left: 0%;
+	  right: 0%;
+	  padding: 25px;
+	  text-transform: capitalize;
+	  top: 60%;
+	  width: 100%;
+	  text-align: center;
+	  font-style: italic;
+	  background-color: black;
+	  font: 15px "Lato", sans-serif;
+	  color: white;
+	}
