News Section CSS Added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -172,4 +172,9 @@
 	  background-color: black;
 	  font: 15px "Lato", sans-serif;
 	  color: white;
+
+	  .news {
+		position: absolute;
+		top: 520px;
+	  }
 	}
