Changes in News Section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -177,4 +177,16 @@
 		position: absolute;
 		top: 520px;
 	  }
+	  
+	  .news h3 {
+		letter-spacing: 4px;
+		padding: 19px;
+		text-transform: capitalize;
+		width: 100%;
+		text-align: left;
+		font-style: bold;
+		background-color: black;
+		font: 20px "Lato", sans-serif;
+		color: white;
+	  }
 	}
