--- a/views/home.ejs
+++ b/views/home.ejs
@@ -177,7 +177,7 @@
 		position: absolute;
 		top: 520px;
 	  }
-	  
+
 	  .news h3 {
 		letter-spacing: 4px;
 		padding: 19px;
@@ -187,6 +187,21 @@
 		font-style: bold;
 		background-color: black;
 		font: 20px "Lato", sans-serif;
+		color: white;
+	  }
+
+	  .news p {
+		letter-spacing: 1px;
+		opacity: 0.7;
+		position: absolute;
+		left: 0%;
+		right: 0%;
+		text-transform: capitalize;
+		top: 80%;
+		width: 100%;
+		text-align: center;
+		background-color: black;
+		font: 15px "Lato", sans-serif;
 		color: white;
 	  }
 	}
