--- a/views/home.ejs
+++ b/views/home.ejs
@@ -209,4 +209,8 @@
 		font-weight: 600;
 		color: white;
 	  }
-	}
+	  .news ul {
+		background-color: rgba(0, 0, 0, 0.3);
+		margin-top: 0;
+	  }
+	</style>
