Home View completed

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
           set before with Titanic.
         </li>
         <li>
-          Due to inflation and the emphasis put on blockbusters, franchises, &
+          Due to inflation and the emphasis put on blockbusters, franchises, and
           so on in recent years though, many were waiting to see if another
           movie could top Avatar's record.
         </li>
@@ -172,45 +172,47 @@
     background-color: black;
     font: 15px "Lato", sans-serif;
     color: white;
+  }
 
-    .news {
-  	position: absolute;
-  	top: 520px;
-    }
+  .news {
+    position: absolute;
+    top: 520px;
+  }
 
-    .news h3 {
-  	letter-spacing: 4px;
-  	padding: 19px;
-  	text-transform: capitalize;
-  	width: 100%;
-  	text-align: left;
-  	font-style: bold;
-  	background-color: black;
-  	font: 20px "Lato", sans-serif;
-  	color: white;
-    }
+  .news h3 {
+    letter-spacing: 4px;
+    padding: 19px;
+    text-transform: capitalize;
+    width: 100%;
+    text-align: left;
+    font-style: bold;
+    background-color: black;
+    font: 20px "Lato", sans-serif;
+    color: white;
+  }
 
-    .news p {
-  	letter-spacing: 1px;
-  	opacity: 0.7;
-  	position: absolute;
-  	left: 0%;
-  	right: 0%;
-  	text-transform: capitalize;
-  	top: 80%;
-  	width: 100%;
-  	text-align: center;
-  	background-color: black;
-  	font: 15px "Lato", sans-serif;
-  	color: white;
-    }
+  .news p {
+    letter-spacing: 1px;
+    opacity: 0.7;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    text-transform: capitalize;
+    top: 80%;
+    width: 100%;
+    text-align: center;
+    background-color: black;
+    font: 15px "Lato", sans-serif;
+    color: white;
+  }
 
-    .news li {
-  	font-weight: 600;
-  	color: white;
-    }
-    .news ul {
-  	background-color: rgba(0, 0, 0, 0.3);
-  	margin-top: 0;
-    }
+  .news li {
+    font-weight: 600;
+    color: white;
+  }
+
+  .news ul {
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-top: 0;
+  }
 </style>
