--- a/sign.ejs
+++ b/sign.ejs
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinephile</title>
     <link rel="icon" type="image/png" href="cp.png">
-  
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script href="functions.js"></script>
-
     <div class="header">
         <h1>Cinephile</h1>
-      </div>
+    </div>
 
-      <div class="topnav">
-          <a href="/">Home</a> |
-          <a href="/explore">Explore</a> |
-          <a href="/trailers">Upcoming Movies</a> |
-          <a href="/sign">SignIn / SignUp</a>
-        </div>
-        
-      </div>
-
-
+    <div class="topnav">
+        <a href="/">Home</a> |
+        <a href="/explore">Explore</a> |
+        <a href="/trailers">Upcoming Movies</a> |
+        <a href="/sign">Sign In / Sign Up</a>
+    </div>
   
-
-  
+    <script src="functions.js"></script>
+</body>
 </html>
