--- a/sign.ejs
+++ b/sign.ejs
@@ -62,7 +62,7 @@
   </form>
 </div>
 <div class="signup">
-    <h3>S I G N - U P</h3>
+    <h3>SignUp</h3>
     <form>
         <table>
             <tbody>
