--- a/sign.ejs
+++ b/sign.ejs
@@ -7,6 +7,9 @@
     <link rel="icon" type="image/png" href="cp.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
+
+
+
   <body>
     <div class="header">
       <h1>Cinephile</h1>
@@ -127,3 +130,12 @@
     </table>
   </form>
 </div>
+
+<style>
+  body,html {
+      background-image: url("cinemared.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      height: 1000px;
+  }
