Header CSS section added

--- a/sign.ejs
+++ b/sign.ejs
@@ -139,3 +139,13 @@
       background-attachment: fixed;
       height: 1000px;
   }
+  
+  .header {
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    background-color: black;
+    padding: 1px;
+    text-align: center;
+    font: 20px "Lato", sans-serif;
+    color: white;
+}
