--- a/sign.ejs
+++ b/sign.ejs
@@ -139,7 +139,7 @@
       background-attachment: fixed;
       height: 1000px;
   }
-  
+
   .header {
     letter-spacing: 8px;
     text-transform: uppercase;
@@ -148,4 +148,19 @@
     text-align: center;
     font: 20px "Lato", sans-serif;
     color: white;
+}
+
+.topnav {
+  width: 100%;
+  overflow: hidden;
+  background-color: black;
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  font: 15px "Lato", sans-serif;
+  font-style: bold;
+  text-transform: uppercase;
+  padding: 1px;
+  letter-spacing: 10px;
 }
