--- a/sign.ejs
+++ b/sign.ejs
@@ -173,3 +173,15 @@ a {
   background-color: #FFD100;
   color: white;
 }
+.signin table {
+  font-family: Arial, Helvetica, sans-serif;
+  width: 497px;
+  color: aliceblue;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.267);
+  position: absolute;
+  top: 45%;
+  left: 33%;
+  padding: 10px;
+  margin: -25px 0 0 -25px; 
+}
