--- a/sign.ejs
+++ b/sign.ejs
@@ -185,3 +185,20 @@ a {
   padding: 10px;
   margin: -25px 0 0 -25px; 
 }
+
+.signin h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+  letter-spacing: 5px;
+  text-transform: capitalize;
+  text-align: center;
+  color: #FFD100;
+  padding: 15px;
+  width: 300px;
+  background-color: rgba(255, 181, 70, 0);
+  border-radius: 20%;
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  margin: -25px 0 0 -25px; 
+}
