--- a/sign.ejs
+++ b/sign.ejs
@@ -219,3 +219,17 @@ a {
   left: 40%;
   margin: -25px 0 0 -25px; 
 }
+
+.signup table { 
+  font-family: Arial, Helvetica, sans-serif;
+  width: 500px;
+  color: aliceblue;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.267);
+  position: absolute;
+  top: 95%;
+  left: 33%;
+  padding: 10px;
+  margin-top: 20px;
+  margin: -25px 0 0 -25px; 
+}
