--- a/sign.ejs
+++ b/sign.ejs
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-
-
   <body>
     <div class="header">
       <h1>Cinephile</h1>
@@ -66,7 +64,6 @@
   </form>
 </div>
 <div class="signup">
-
   <h3>SignUp</h3>
   <form>
     <table>
@@ -132,12 +129,13 @@
 </div>
 
 <style>
-  body,html {
-      background-image: url("cinemared.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-attachment: fixed;
-      height: 1000px;
+  body,
+  html {
+    background-image: url("cinemared.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 1000px;
   }
 
   .header {
@@ -148,93 +146,94 @@
     text-align: center;
     font: 20px "Lato", sans-serif;
     color: white;
-}
+  }
 
-.topnav {
-  width: 100%;
-  overflow: hidden;
-  background-color: black;
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  font: 15px "Lato", sans-serif;
-  font-style: bold;
-  text-transform: uppercase;
-  padding: 1px;
-  letter-spacing: 10px;
-}
+  .topnav {
+    width: 100%;
+    overflow: hidden;
+    background-color: black;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    font: 15px "Lato", sans-serif;
+    font-style: bold;
+    text-transform: uppercase;
+    padding: 1px;
+    letter-spacing: 10px;
+  }
 
-a {
-  text-decoration: none;
-}
+  a {
+    text-decoration: none;
+  }
 
-.topnav a:hover, a:visited {
-  background-color: #FFD100;
-  color: white;
-}
-.signin table {
-  font-family: Arial, Helvetica, sans-serif;
-  width: 497px;
-  color: aliceblue;
-  height: 200px;
-  background-color: rgba(255, 255, 255, 0.267);
-  position: absolute;
-  top: 45%;
-  left: 33%;
-  padding: 10px;
-  margin: -25px 0 0 -25px; 
-}
+  .topnav a:hover,
+  a:visited {
+    background-color: #ffd100;
+    color: white;
+  }
+  .signin table {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 497px;
+    color: aliceblue;
+    height: 200px;
+    background-color: rgba(255, 255, 255, 0.267);
+    position: absolute;
+    top: 45%;
+    left: 33%;
+    padding: 10px;
+    margin: -25px 0 0 -25px;
+  }
 
-.signin h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
-  letter-spacing: 5px;
-  text-transform: capitalize;
-  text-align: center;
-  color: #FFD100;
-  padding: 15px;
-  width: 300px;
-  background-color: rgba(255, 181, 70, 0);
-  border-radius: 20%;
-  position: absolute;
-  top: 25%;
-  left: 40%;
-  margin: -25px 0 0 -25px; 
-}
+  .signin h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    letter-spacing: 5px;
+    text-transform: capitalize;
+    text-align: center;
+    color: #ffd100;
+    padding: 15px;
+    width: 300px;
+    background-color: rgba(255, 181, 70, 0);
+    border-radius: 20%;
+    position: absolute;
+    top: 25%;
+    left: 40%;
+    margin: -25px 0 0 -25px;
+  }
 
-.signup h3 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 40px;
-  letter-spacing: 5px;
-  text-transform: capitalize;
-  text-align: center;
-  color: #FFD100;
-  padding: 15px;
-  width: 300px;
-  background-color: rgba(255, 181, 70, 0);
-  border-radius: 20%;
-  position: absolute;
-  top: 75%;
-  left: 40%;
-  margin: -25px 0 0 -25px; 
-}
+  .signup h3 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+    letter-spacing: 5px;
+    text-transform: capitalize;
+    text-align: center;
+    color: #ffd100;
+    padding: 15px;
+    width: 300px;
+    background-color: rgba(255, 181, 70, 0);
+    border-radius: 20%;
+    position: absolute;
+    top: 75%;
+    left: 40%;
+    margin: -25px 0 0 -25px;
+  }
 
-.signup table { 
-  font-family: Arial, Helvetica, sans-serif;
-  width: 500px;
-  color: aliceblue;
-  height: 200px;
-  background-color: rgba(255, 255, 255, 0.267);
-  position: absolute;
-  top: 95%;
-  left: 33%;
-  padding: 10px;
-  margin-top: 20px;
-  margin: -25px 0 0 -25px; 
-}
+  .signup table {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 500px;
+    color: aliceblue;
+    height: 200px;
+    background-color: rgba(255, 255, 255, 0.267);
+    position: absolute;
+    top: 95%;
+    left: 33%;
+    padding: 10px;
+    margin-top: 20px;
+    margin: -25px 0 0 -25px;
+  }
 
-.error {
-  color: red;
-}
+  .error {
+    color: red;
+  }
 </style>
