--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,9 @@
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
+
+<style>
+.error {
+    color: red;
+  }
+</style>
