Navbar updated in Trailers Page

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -2,8 +2,14 @@
 	<head>
 		<title> Cinephile </title>
         <link rel="icon" type="image/png" href="cp.png">
-        
-    </div>
+     
+
+<body>
+    <div class="header">
+        <h1>Cinephile</h1>
+      </div>
+
+      
 
     </body>
     </html>
