Header with Navbar

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -9,7 +9,17 @@
         <h1>Cinephile</h1>
       </div>
 
-      
+      <div class="topnav">
+          <a href="/">Home</a> |
+          <a href="/explore">Explore</a> |
+          <a href="/trailers">Upcoming Movies</a> |
+          <a href="/sign">SignIn / SignUp</a>
+        </div>
+        
+      </div>
+
+    
+    </div>
 
     </body>
     </html>
