--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -18,7 +18,13 @@
         
       </div>
 
-    
+    <div class="trailers">
+        <div class="dune">
+            <h3>Dune (June 2023)</h3>
+        <iframe src="https://www.youtube.com/embed/n9xhJrPXop4?autoplay=1&mute=1"></iframe>
+        </div>
+
+       
     </div>
 
     </body>
