--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -29,7 +29,12 @@
         <iframe src="https://www.youtube.com/embed/wZti8QKBWPo"></iframe>
         </div>
 
-      
+        <div class="johnwick">
+            <h3>John Wick(April 2023)</h3>
+        <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
+        </div>
+
+       
     </div>
 
     </body>
