--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -34,7 +34,12 @@
         <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
         </div>
 
-       
+        <div class="FastandFurious">
+            <h3>Fast X(June 2023)</h3>
+        <iframe src=https://www.youtube.com/embed/32RAq6JzY-w?start=1></iframe>
+        </div>
+
+    
     </div>
 
     </body>
