--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -39,7 +39,10 @@
         <iframe src=https://www.youtube.com/embed/32RAq6JzY-w?start=1></iframe>
         </div>
 
-    
+        <div class="Mortal">
+            <h3> Mortal Kombat (June 2023)</h3>
+        <iframe src="https://www.youtube.com/embed/NYH2sLid0Zc"></iframe>
+        </div>
     </div>
 
     </body>
