--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -2,48 +2,48 @@
 	<head>
 		<title> Cinephile </title>
         <link rel="icon" type="image/png" href="cp.png">
-     
+    </head>
 
-<body>
-    <div class="header">
-        <h1>Cinephile</h1>
-      </div>
-
-      <div class="topnav">
-          <a href="/">Home</a> |
-          <a href="/explore">Explore</a> |
-          <a href="/trailers">Upcoming Movies</a> |
-          <a href="/sign">SignIn / SignUp</a>
-        </div>
+        <body>
+            <div class="header">
+                <h1>Cinephile</h1>
+              </div>
         
-      </div>
-
-    <div class="trailers">
-        <div class="dune">
-            <h3>Dune (June 2023)</h3>
-        <iframe src="https://www.youtube.com/embed/n9xhJrPXop4?autoplay=1&mute=1"></iframe>
-        </div>
-
-        <div class="nobody">
-            <h3>Nobody (26 March 2023)</h3>
-        <iframe src="https://www.youtube.com/embed/wZti8QKBWPo"></iframe>
-        </div>
-
-        <div class="johnwick">
-            <h3>John Wick(April 2023)</h3>
-        <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
-        </div>
-
-        <div class="FastandFurious">
-            <h3>Fast X(June 2023)</h3>
-        <iframe src=https://www.youtube.com/embed/32RAq6JzY-w?start=1></iframe>
-        </div>
-
-        <div class="Mortal">
-            <h3> Mortal Kombat (June 2023)</h3>
-        <iframe src="https://www.youtube.com/embed/NYH2sLid0Zc"></iframe>
-        </div>
-    </div>
-
-    </body>
-    </html>
+              <div class="topnav">
+                  <a href="/">Home</a> |
+                  <a href="/explore">Explore</a> |
+                  <a href="/trailers">Upcoming Movies</a> |
+                  <a href="/sign">SignIn / SignUp</a>
+                </div>
+                
+              </div>
+        
+            <div class="trailers">
+                <div class="dune">
+                    <h3>Dune (June 2023)</h3>
+                <iframe src="https://www.youtube.com/embed/n9xhJrPXop4?autoplay=1&mute=1"></iframe>
+                </div>
+        
+                <div class="nobody">
+                    <h3>Nobody (26 March 2023)</h3>
+                <iframe src="https://www.youtube.com/embed/wZti8QKBWPo"></iframe>
+                </div>
+        
+                <div class="johnwick">
+                    <h3>John Wick(April 2023)</h3>
+                <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
+                </div>
+        
+                <div class="FastandFurious">
+                    <h3>Fast X(June 2023)</h3>
+                <iframe src=https://www.youtube.com/embed/32RAq6JzY-w?start=1></iframe>
+                </div>
+        
+                <div class="Mortal">
+                    <h3> Mortal Kombat (June 2023)</h3>
+                <iframe src="https://www.youtube.com/embed/NYH2sLid0Zc"></iframe>
+                </div>
+            </div>
+        
+        </body>
+</html>
