Used Prettier to complete the formatting

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -1,49 +1,53 @@
-<html>
-	<head>
-		<title> Cinephile </title>
-        <link rel="icon" type="image/png" href="cp.png">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cinephile</title>
+    <link rel="icon" type="image/png" href="cp.png">
 
-        <body>
-            <div class="header">
-                <h1>Cinephile</h1>
-              </div>
-        
-              <div class="topnav">
-                  <a href="/">Home</a> |
-                  <a href="/explore">Explore</a> |
-                  <a href="/trailers">Upcoming Movies</a> |
-                  <a href="/sign">SignIn / SignUp</a>
-                </div>
-                
-              </div>
-        
-            <div class="trailers">
-                <div class="dune">
-                    <h3>Dune (June 2023)</h3>
-                <iframe src="https://www.youtube.com/embed/n9xhJrPXop4?autoplay=1&mute=1"></iframe>
-                </div>
-        
-                <div class="nobody">
-                    <h3>Nobody (26 March 2023)</h3>
-                <iframe src="https://www.youtube.com/embed/wZti8QKBWPo"></iframe>
-                </div>
-        
-                <div class="johnwick">
-                    <h3>John Wick(April 2023)</h3>
-                <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
-                </div>
-        
-                <div class="FastandFurious">
-                    <h3>Fast X(June 2023)</h3>
-                <iframe src=https://www.youtube.com/embed/32RAq6JzY-w?start=1></iframe>
-                </div>
-        
-                <div class="Mortal">
-                    <h3> Mortal Kombat (June 2023)</h3>
-                <iframe src="https://www.youtube.com/embed/NYH2sLid0Zc"></iframe>
-                </div>
-            </div>
-        
-        </body>
+</head>
+<body>
+    <div class="header">
+        <h1>Cinephile</h1>
+    </div>
+
+    <div class="topnav">
+        <a href="/">Home</a> |
+        <a href="/explore">Explore</a> |
+        <a href="/trailers">Upcoming Movies</a> |
+        <a href="/sign">SignIn / SignUp</a>
+    </div>
+
+    <div class="trailers">
+        <div class="dune">
+            <h3>Dune (June 2023)</h3>
+            <iframe src="https://www.youtube.com/embed/n9xhJrPXop4?autoplay=1&mute=1"></iframe>
+        </div>
+
+        <div class="nobody">
+            <h3>Nobody (26 March 2023)</h3>
+            <iframe src="https://www.youtube.com/embed/wZti8QKBWPo"></iframe>
+        </div>
+
+        <div class="johnwick">
+            <h3>John Wick(April 2023)</h3>
+            <iframe src="https://www.youtube.com/embed/56pvThSsoSE"></iframe>
+        </div>
+
+        <div class="FastandFurious">
+            <h3>Fast X(June 2023)</h3>
+            <iframe src="https://www.youtube.com/embed/32RAq6JzY-w?start=1"></iframe>
+        </div>
+
+        <div class="Mortal">
+            <h3>Mortal Kombat (June 2023)</h3>
+            <iframe src="https://www.youtube.com/embed/NYH2sLid0Zc"></iframe>
+        </div>
+    </div>
+</body>
 </html>
+
+<style>
+   
+</style>
