Trailers Html Body CSS

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -49,5 +49,13 @@
 </html>
 
 <style>
-   
+    body, html {
+        height: 50%;
+        background-image: url("signin.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+
 </style>
