Header CSS updated

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -57,5 +57,14 @@
         background-size: cover;
         background-attachment: fixed;
     }
-
+    .header {
+        letter-spacing: 8px;
+        text-transform: uppercase;
+        background-color: black;
+        padding: 1px;
+        text-align: center;
+        font: 20px "Lato", sans-serif;
+        color: white;
+    }
+   
 </style>
