Navigation Bar Css updated

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -66,5 +66,22 @@
         font: 20px "Lato", sans-serif;
         color: white;
     }
+    .topnav {
+        width: 100%;
+        overflow: hidden;
+        background-color: black;
+        float: left;
+        display: block;
+        color: White;
+        text-align: center;
+        font: 15px "Lato", sans-serif;
+        font-style: bold;
+        text-transform: uppercase;
+        padding: 1px;
+        letter-spacing: 10px;
+    }
+    a {
+        text-decoration: none;
+    }
    
 </style>
