--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -83,5 +83,9 @@
     a {
         text-decoration: none;
     }
+    .topnav a:hover, a:visited {
+        background-color: #FFD100;
+        color: white;
+    }
    
 </style>
