Trailers iFrame Css updated

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -87,5 +87,12 @@
         background-color: #FFD100;
         color: white;
     }
+    .trailers iframe {
+        width: 560px;
+        height: 315px;
+        position: relative;
+        margin-left: 30%;
+        margin-right: 10%;
+    }
    
 </style>
