Trailers CSS Completed

--- a/views/trailers.ejs
+++ b/views/trailers.ejs
@@ -94,5 +94,20 @@
         margin-left: 30%;
         margin-right: 10%;
     }
-   
+    .trailers h3 {
+        width: 85%;
+        margin-left: 10%;
+        margin-right: 10%;
+        text-align: center;
+        position: relative;
+        padding: 25px;
+        top: 50%;
+        background-color: rgba(253, 214, 42, 0.871);
+        color: aliceblue;
+        font: 25px "Lato", sans-serif;
+        font-style: bold;
+        text-transform: uppercase;
+        padding: 1px;
+        letter-spacing: 10px;
+    }
 </style>
