Movies Css updated

--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -16,3 +16,14 @@
 	</ul>
 </body>
 </html>
+
+<style>
+	body {
+		padding: 50px;
+		font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+		background: #666;
+		color: #ccc;
+	  }
+	  
+
+</style>
