--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,3 +9,5 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <title>Cinephile</title>
+  </head>
