Top Navigation Bar updated in the index.js File

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,3 +11,14 @@
     />
     <title>Cinephile</title>
   </head>
+
+  <body>
+    <div class="header">
+      <h1 class="yellow">Cinephile</h1>
+    </div>
+    <div class="topnav">
+      <a href="/">Home</a> |
+      <a href="/explore">Explore</a> |
+      <a href="/trailers">Upcoming Movies</a> |
+      <a href="/sign">SignIn / SignUp</a>
+    </div>
