Added some text elements representing what do do

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,3 +22,8 @@
       <a href="/trailers">Upcoming Movies</a> |
       <a href="/sign">SignIn / SignUp</a>
     </div>
+    <main role="main">
+      <div class="jumbotron">
+        <div class="container">
+          <h3 class="white">Enter your favorite movies, & Create a List</h3>
+          <p class="white">You can't get more exciting than that. Ok let's get started. Add a movie!</p>
