POST Method created on Form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,3 +27,11 @@
         <div class="container">
           <h3 class="white">Enter your favorite movies, & Create a List</h3>
           <p class="white">You can't get more exciting than that. Ok let's get started. Add a movie!</p>
+          <form method="post" action="/movies">
+            <div class="row">
+              <div class="col-sm-12 col-md-6 mb-6">
+                <div class="form-group">
+                  <label class="white" for="name">Movie Title</label>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" />
+                </div>
+              </div>
