--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,3 +35,12 @@
                   <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" />
                 </div>
               </div>
+              <div class="col-sm-12 col-md-6 mb-6">
+                <div class="form-group">
+                  <label class="white" for="releaseDate">Release Date</label>
+                  <input type="number" class="form-control" id="releaseDate" name="releaseDate" aria-describedby="dateHelp"
+                    placeholder="Enter the release date of this film" />
+                  <small id="dateHelp" class="form-text text-muted">Just enter the year of the release</small>
+                </div>
+              </div>
+            </div>
