Form Div completed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,3 +44,7 @@
                 </div>
               </div>
             </div>
+            <button type="submit" class="btn btn-primary">Add Movie</button>
+          </form>
+        </div>
+      </div>
