--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,3 +68,8 @@
           <% }); %>
         </div>
       </div>
+      <hr />
+    </main>
+    <footer class="container">
+      <p>© COMSATS 2023-2024</p>
+    </footer>
