--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,5 +101,8 @@
   .navbar {
     background-color: black !important;
   }
+  .jumbotron {
+    background-image: url('../signin.jpg');
+  }
   
 </style>
