--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,5 +110,14 @@
   .yellow {
     color: #ffd100;
   }
+  .header, .topnav {
+    background-color: black;
+    color: white;
+    text-align: center;
+    font: bold 20px/1.5 "Lato", sans-serif;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    padding: 1px;
+  }
   
 </style>
