TopNav CSS Frontend Index.Js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,5 +119,12 @@
     text-transform: uppercase;
     padding: 1px;
   }
-  
+  .topnav {
+    width: 100%;
+    overflow: hidden;
+    display: block;
+    font-size: 15px;
+    letter-spacing: 10px;
+  }
+ 
 </style>
