--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,5 +126,8 @@
     font-size: 15px;
     letter-spacing: 10px;
   }
- 
+  .topnav a {
+    text-decoration: none;
+    color: white;
+  }
 </style>
